# ComfyUI-PackedPipes

./: LICENSE  README.md  __init__.py  packed_pipes.py  pyproject.toml
.github/workflows/: publish.yml
assets/workflows/: video_wan2_2_14B_i2v_sequence.json
js/: packed_pipes.js
