[project]
name = "packedpipes"
description = "This curom node help organize connections in the ComfyUI workflow by combining multiple links into a single pipeline link."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/id7238/ComfyUI-PackedPipes"
#  Used by Comfy Registry https://registry.comfy.org
"Bug Tracker" = "https://github.com/id7238/ComfyUI-PackedPipes/issues"

[tool.comfy]
PublisherId = "id7238"
DisplayName = "ComfyUI-PackedPipes"
Icon = "https://raw.githubusercontent.com/id7238/ComfyUI-PackedPipes/docs/assets/images/icon.jpg"
Banner ="https://raw.githubusercontent.com/id7238/ComfyUI-PackedPipes/docs/assets/images/banner.jpg"
includes = [] 
requires-comfyui = "<2.0.0"  # ComfyUI version compatibility
